# lotis

./: .gitignore  LICENSE  README.md  app.py  final_config.yaml  infer.py  pyproject.toml
examples/00_KTH_Campus/: reference.txt
examples/01_SCAND/: reference.txt
lotis/: config.py  localizer.py
lotis/model/: __init__.py  model.py  prediction_head.py
lotis/model/layers/: dual_att_enc.py  split_rope.py
nav_eval/: WRITING_A_METHOD.md  __init__.py  compare.py  config.py  dataset.py  explore.py  interfaces.py  metrics.py  registry.py  run.py  runner.py
nav_eval/configs/: lotis_method.yaml
nav_eval/configs/datasets/: gibson.yaml  hm3d.yaml
nav_eval/habitat/: __init__.py  runtime.py
nav_eval/methods/: __init__.py  lotis.py
